# portfolio-backend

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
config/: settings.py
django-project/config/: settings.py
django_project/companies/: admin.py  models.py  serializers.py  urls.py  views.py
django_project/companies/migrations/: 0001_initial.py  0002_customercompany_size_employercompany_size_and_more.py  0003_alter_customercompany_company_type_and_more.py  0004_customercompany_backend_skills_and_more.py  0005_remove_customercompany_backend_skills_and_more.py
django_project/config/: settings.py  urls.py
django_project/projects/: admin.py  forms.py  models.py  serializers.py
django_project/projects/migrations/: 0001_initial.py  0002_alter_asemployeeproject_goals_and_more.py  0003_alter_asemployeeproject_categories_and_more.py  0004_asemployeeproject_backend_stack_and_more.py  0005_asemployeeproject_contribution_role_and_more.py
django_project/skills/: admin.py  forms.py  models.py  serializers.py
django_project/skills/migrations/: 0001_initial.py  0002_remove_backendskill_category_and_more.py
